package org.example.Ecommerce;

/**
 * Clase principal que inicia la aplicación de Ecommerce.
 */
public class AppEccomerce {

    /**
     * Método principal que inicia el proceso de pago.
     */
    public static void main(String[] args) {
        Tienda.iniciarPago();
    }
}
